--- a/css/styles.css
+++ b/css/styles.css
@@ -44,21 +44,19 @@ img {
 }
 .skills {
   padding-top: 94px;
-  padding-bottom: 47px;
+  padding-bottom: 94px;
 }
 .contanier {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
+  max-width: 1200px;
+  padding: 0 15px 0 15px;
+  margin: 0 auto;
 }
 body {
   font-family: 'Roboto', sans-serif;
-  font-style: normal;
-  font-weight: normal;
+
+  font-weight: 400;
   font-size: 14px;
-  line-height: 1.71;
+  line-height: 1.14;
   letter-spacing: 0.03em;
   color: var(--text-color);
 }
@@ -347,52 +345,45 @@ body {
 /*============end hero=========*/
 
 /*=======skills company========*/
-.container .skills-list {
-  display: flex;
+.skills {
   padding-bottom: 0;
-  margin-top: -30px;
-  margin-left: -30px;
+}
+.skills-list {
+  display: flex;
 }
 .skills-list-item {
-  /* width: 270px; */
-  width: calc((100% - 120px) / 4);
-  margin-top: 30px;
-  margin-left: 30px;
+  width: 270px;
+}
+.skills-list-item:not(:last-child) {
+  margin-right: 30px;
 }
 .skills-list-item-bg {
   display: flex;
+  height: 120px;
   align-items: center;
   justify-content: center;
-  width: 270px;
-  height: 120px;
   border-radius: 4px;
-  margin-bottom: 30px;
-
   background-color: var(--background-color);
+  margin-bottom: 30px;
 }
 .skills-list-title {
   font-family: inherit;
   font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--main-color);
-  margin-bottom: 10px;
 }
 .skills-list-text {
+  margin-top: 10px;
   font-family: inherit;
-  font-weight: 400;
-  font-size: 14px;
   line-height: 1.71;
-  letter-spacing: 0.03em;
+  margin-top: 10px;
   color: var(--text-color);
 }
 /*=====end skills company======*/
 
 /*========pictures=============*/
 .pictures {
-  padding-top: 47px;
+  padding-top: 94px;
   padding-bottom: 94px;
   text-align: center;
 }
