--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
   --background-color: #f5f4fa;
   --white-contacts-color: rgba(255, 255, 255, 0.6);
   --border-color: rgba(238, 238, 238, 1);
+  --animation: 2500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /*===== Плавный скрол header&footer ====*/
 html {
@@ -82,6 +83,7 @@ body {
 .address-contact-link:hover,
 .address-contact-link:focus {
   color: var(--accent-color);
+  transition: var(--animation);
 }
 .hero {
   max-width: 1600px;
@@ -97,6 +99,11 @@ body {
   text-align: center;
 }
 .header {
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+  height: 80px;
   border-bottom: 1px solid #ececec;
   background-color: var(--body-background-color);
 }
@@ -199,6 +206,7 @@ body {
 .header-contact-link:hover,
 .header-contact-link:focus {
   color: var(--accent-color);
+  transition: var(--animation);
 }
 /* ====== icons contact===== */
 .mail {
@@ -238,6 +246,34 @@ body {
   margin-right: auto;
   margin-bottom: 30px;
 }
+/*====== portfolio ==========*/
+.project-item-img-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+.overlay {
+  font-size: 18px;
+  line-height: 1.55;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 24px;
+  color: rgba(255, 255, 255, 1);
+  background-color: rgba(33, 150, 243, 0.9);
+  overflow: auto;
+  transform: translateY(100%);
+  transition: transform 250ms linear;
+}
+.project-foto:hover .overlay,
+.project-foto:focus .overlay {
+  transform: translateY(0%);
+  transition: var(--animation);
+}
 .project {
   flex-wrap: wrap;
   align-items: flex-start;
@@ -253,6 +289,7 @@ body {
 .project-item:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+  transition: var(--animation);
 }
 .project-heading-content {
   padding-top: 20px;
@@ -298,6 +335,7 @@ body {
 .modal-btn:hover,
 .modal-btn:focus {
   color: var(--logo-color);
+  transition: var(--animation);
 }
 .filter-options {
   justify-content: center;
@@ -320,6 +358,7 @@ body {
   color: var(--background-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
+  transition: var(--animation);
 }
 .filter-item {
   font-family: inherit;
@@ -397,6 +436,30 @@ body {
 .pictures-list-item {
   margin-left: 30px;
   margin-top: 30px;
+  position: relative;
+}
+.pictures-description {
+  color: var(--text-color);
+  margin-top: 10px;
+  line-height: 1.71;
+}
+.pictures-description {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 70px;
+  width: 100%;
+  background-color: rgba(47, 48, 58, 0.8);
+}
+.pictures-description > p {
+  font-weight: 700;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
 }
 .pictures-title {
   font-family: inherit;
@@ -480,6 +543,7 @@ body {
 .link-social:focus {
   background-color: var(--accent-color);
   fill: var(--body-background-color);
+  transition: var(--animation);
 }
 /*=========end team============*/
 /*========section-clients======*/
@@ -502,12 +566,6 @@ body {
 .logo-clients:not(:last-child) {
   margin-right: 30px;
 }
-
-.logo-clients:hover,
-.logo-clients:focus {
-  border-color: var(--accent-color);
-}
-
 .icon-clients {
   display: flex;
   justify-content: center;
@@ -522,8 +580,11 @@ body {
 }
 .icon-clients:hover,
 .icon-clients:focus {
+  color: var(--accent-color);
   border-color: var(--accent-color);
+  transition-property: color, border-color;
   fill: var(--accent-color);
+  transition: var(--animation);
 }
 /*==========footer=============*/
 .footer {
