--- a/css/styles.css
+++ b/css/styles.css
@@ -99,11 +99,11 @@ body {
   text-align: center;
 }
 .header {
-  position: fixed;
+  position: sticky;
   top: 0;
   z-index: 1;
   width: 100%;
-  height: 80px;
+
   border-bottom: 1px solid #ececec;
   background-color: var(--body-background-color);
 }
@@ -136,6 +136,8 @@ body {
   letter-spacing: 0.03em;
   color: var(--accent-color);
   margin-right: 70px;
+  animation-duration: 2000ms;
+  animation-iteration-count: 2;
 }
 .logo-1 {
   font-family: 'Raleway', sans-serif;
@@ -149,6 +151,7 @@ body {
 .navigation {
   display: flex;
   align-items: center;
+  cursor: pointer;
 }
 .menu-item:not(:last-child) {
   margin-right: 50px;
@@ -252,27 +255,28 @@ body {
   overflow: hidden;
 }
 .overlay {
-  font-size: 18px;
-  line-height: 1.55;
   position: absolute;
   top: 0;
   left: 0;
+  overflow: auto;
+
+  transition-property: transform;
+  transform: translateY(100%);
+  transition: var(--animation);
+
+  padding: 63px 24px;
   width: 100%;
   height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 24px;
-  color: rgba(255, 255, 255, 1);
   background-color: rgba(33, 150, 243, 0.9);
-  overflow: auto;
-  transform: translateY(100%);
-  transition: transform 250ms linear;
+
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: var(--body-background-color);
 }
 .project-foto:hover .overlay,
 .project-foto:focus .overlay {
   transform: translateY(0%);
-  transition: var(--animation);
 }
 .project {
   flex-wrap: wrap;
@@ -663,3 +667,60 @@ body {
   fill: var(--body-background-color);
 }
 /*======= end footer=============*/
+
+/* ======= modal window ======== */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 100;
+  background-color: rgba(0, 0, 0, 0.2);
+
+  transition-property: opacity, visibility;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal {
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+
+  width: 528px;
+  height: 580px;
+
+  background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+.modal-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  width: 30px;
+  height: 30px;
+
+  position: absolute;
+  top: 8px;
+  right: 8px;
+
+  cursor: pointer;
+
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+}
+.modal-icon {
+  width: 18px;
+  height: 18px;
+}
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+/* ====== end modal window ===== */
